deploy index.html

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SolarPayAPI</title>
+    <title>SolarPayBankingApp</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to SolarPayAPI</h1>
-    <p>This is the default landing page.</p>
+    <h1>Сайт в разработке</h1>
 </body>
 </html>
